--- a/views/home.html
+++ b/views/home.html
@@ -32,11 +32,11 @@
             <div>
             <ul type="none">
                 <li><span>
-                    <a href="./register">Creá tu cuenta</a>
+                    <a href="/register">Creá tu cuenta</a>
                     <i id ="logos" class="far fa-address-card"></i>
                 </span></li>
                 <li><span>
-                    <a href="./login">Ingresá</a>
+                    <a href="/login">Ingresá</a>
                     <i id ="logos" class="fas fa-sign-in-alt"></i>
                 </span></li>   
                 <li><span>
